--- a/Frontend1/package.json
+++ b/Frontend1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ignitionhacks",
+  "name": "ignitonhacks",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-router": "^3.4.3",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
