--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "@mdi/js": "^5.5.55",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-router": "^3.4.3",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
