--- a/trivia_trials/package.json
+++ b/trivia_trials/package.json
@@ -14,19 +14,20 @@
     ],
     "license": "MIT",
     "dependencies": {
-        "cookie-parser": "^1.4.4",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
-        "helmet": "^3.21.2",
-        "express-custom-error": "^1.8.4",
-        "http-status": "^1.3.2",
+        "express": "^4.17.1",
+        "express-custom-error": "^1.9.4",
         "has-keys": "^0.1.0",
-        "morgan": "^1.9.1",
-        "rotating-file-stream": "^1.4.6",
-        "mandatoryenv": "^1.1.1",
+        "helmet": "^3.23.3",
+        "http-status": "^1.3.2",
+        "mandatoryenv": "^1.1.6",
         "module-alias": "^2.2.2",
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.4",
         "pg": "^7.12.1",
         "pg-hstore": "^2.3.3",
-        "sequelize": "^5.19.2",
-        "express": "^4.17.1"
+        "rotating-file-stream": "^1.4.6",
+        "sequelize": "^5.19.2"
     }
 }
