--- a/trivia_trials/package.json
+++ b/trivia_trials/package.json
@@ -21,6 +21,7 @@
         "has-keys": "^0.1.0",
         "helmet": "^3.23.3",
         "http-status": "^1.3.2",
+        "jsonwebtoken": "^8.5.1",
         "mandatoryenv": "^1.1.6",
         "module-alias": "^2.2.2",
         "morgan": "^1.10.0",
