--- a/igni/package.json
+++ b/igni/package.json
@@ -3,7 +3,6 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "rootUrl": "src",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "nodemon"
@@ -14,6 +13,7 @@
     "dependencies": {
         "@types/express": "^4.17.7",
         "@types/node": "^14.6.0",
+        "@types/pg": "^7.14.4",
         "express": "^4.17.1",
         "ts-node": "^9.0.0",
         "typescript": "^4.0.2"
