--- a/igni/package.json
+++ b/igni/package.json
@@ -14,6 +14,7 @@
         "@types/express": "^4.17.7",
         "@types/node": "^14.6.0",
         "@types/pg": "^7.14.4",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "pg": "^8.3.2",
         "ts-node": "^9.0.0",
