--- a/igni/package.json
+++ b/igni/package.json
@@ -12,10 +12,12 @@
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.17.7",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/node": "^14.6.0",
         "@types/pg": "^7.14.4",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "pg": "^8.3.2",
         "ts-node": "^9.0.0",
         "typescript": "^4.0.2"
