--- a/igni/package.json
+++ b/igni/package.json
@@ -18,6 +18,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "morgan": "^1.10.0",
         "pg": "^8.3.2",
         "ts-node": "^9.0.0",
         "typescript": "^4.0.2"
