--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 
 Frontend/package-lock.json
+video/impact.pkf
+video/impact.wav
+video/intro.pkf
+video/intro.wav
+video/Photos.zip
+video/Photos/VID_20200823_224715.mp4
+video/Photos/VID_20200823_230305.mp4
+video/video.prproj
