--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,14 @@ video/Photos.zip
 video/Photos/VID_20200823_224715.mp4
 video/Photos/VID_20200823_230305.mp4
 video/video.prproj
+video/Untitled 4.wav
+video/Untitled 4.pkf
+video/Main.mp4
+video/future.wav
+video/future.pkf
+video/Adobe Premiere Pro Auto-Save/video.prproj
+video/Adobe Premiere Pro Auto-Save/video-2020-08-24_00-32-02.prproj
+video/Adobe Premiere Pro Auto-Save/video-2020-08-23_23-56-10.prproj
+video/Adobe Premiere Pro Auto-Save/video-2020-08-23_23-42-20.prproj
+video/Adobe Premiere Pro Auto-Save/video-2020-08-23_23-26-35.prproj
+video/Adobe Premiere Pro Auto-Save/video-2020-08-24_01-57-43.prproj
